Fixed the main display styles for the App Component to stretch child section components to the full height of the screen

--- a/src/website-color-generator-app/src/App.scss
+++ b/src/website-color-generator-app/src/App.scss
@@ -1,14 +1,13 @@
 .App {
-  text-align: center;
-  height: 100%;
-  width: 100%;
+  // text-align: center;
+  min-height: 100vh;
   margin: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: left;
-  align-items: normal;
-  align-content: normal;
+  align-items: stretch;
+  align-content: stretch;
 }
 
 .App-logo {
